--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html>
-<head></head>
+<head>
+  <meta charset="utf-8">
+</head>
 
 <body>
-    <div id="app"></div>
+  <div id="app"></div>
 </body>
 <script src="./dist/build.js"></script>
 
 </html>
+
+<style>
+  body {
+    margin: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+</style>
